@@ -35,7 +35,7 @@ public class Deck {
         if (cards.isEmpty()) {
             return null;
         }
-        return cards.remove(0);
+        return cards.removeFirst();
     }
 
     // Getter for cards
